fix openFullImage in gallery (bug ih handling diptych/triptych), make fullImage in gallery fixed position, make header visible everywhere

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -68,7 +68,7 @@
 
 .image-block:hover {
   transform: scale(1.02);
-  z-index: 999;
+  z-index: 20;
   transition: transform 0.3s 0s linear;
 }
 
@@ -77,7 +77,7 @@
   align-self: end;
   transform: translateY(100%);
   transition: transform 0.1s 0.1s ease-in;
-  z-index: 999;
+  z-index: 20;
 }
 
 .image-block__text,
@@ -99,12 +99,12 @@ Full image
 .full-image {
   width: 100vw;
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   padding: 0.7rem;
   grid-template-columns: auto 1fr auto;
   grid-template-rows: auto 1fr auto;
-  z-index: 9997;
+  z-index: 25;
 }
 
 .full-image__overlay {
@@ -124,7 +124,7 @@ Full image
   max-height: 97%;
   align-self: center;
   justify-self: center;
-  z-index: 9999;
+  z-index: 25;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
@@ -171,7 +171,8 @@ Full image
   width: 5rem;
   height: 5rem;
   padding: 1rem;
-  z-index: 10000;
+  margin-top: 7vh;
+  z-index: 25;
 }
 
 .full-image__arrow {
@@ -179,7 +180,7 @@ Full image
   width: 2rem;
   grid-row: 3 / 4;
   align-self: center;
-  z-index: 10000;
+  z-index: 25;
 }
 
 .full-image__arrow--left {
